fix navbar dropdown size

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -25,5 +25,7 @@ $border-radius-sm: 5px;
 
 // Override other variables below!
 $dropdown-border-color: #0e0000;
+$dropdown-border-radius: 5px;
+$dropdown-min-width: 8rem;
 $btn-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
   border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
