--- a/app/views/pages/_new_user.html.erb
+++ b/app/views/pages/_new_user.html.erb
@@ -4,7 +4,7 @@
     <div class="col-lg-6 mx-auto">
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
         <a class="btn btn-primary btn-lg px-4 me-sm-3" href="<%= new_user_registration_path %>" role="button">Sign Up</a>
-        <a class="btn btn-outline-secondary btn-lg px-4" href="<%= new_user_session_path %>" role="button">Sign in</a>
+        <a class="btn btn-dark-secondary btn-lg px-4" href="<%= new_user_session_path %>" role="button">Sign in</a>
       </div>
     </div>
     <div class="overflow-hidden" style="max-height: 30vh;">
@@ -19,61 +19,64 @@
 <div>
 
 <div class="container py-5" id="icon-grid">
-    <h2 class="pb-2">Why Calcometer?</h2>
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 g-4 py-5">
-      <div class="col d-flex align-items-start">
-        <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-          <%= render inline: Rails.root.join('public/speedometer.svg').read %>
-        </svg>
-        <div>
-          <h3 class="fw-bold mb-0 fs-4">Effortless time management</h3>
-          <p>Seamless automatic distance and time calculations between patients or customers.</p>
-        </div>
+  <h2 class="pb-2">Why Calcometer?</h2>
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 g-4">
+    <div class="col d-flex align-items-start">
+      <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
+        <%= render inline: Rails.root.join('public/speedometer.svg').read %>
+      </svg>
+      <div>
+        <h3 class="fw-bold mb-0 fs-4">Effortless time management</h3>
+        <p>Seamless automatic distance and time calculations between patients or customers.</p>
       </div>
-      <div class="col d-flex align-items-start">
-        <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-          <%= render inline: Rails.root.join('public/safe.svg').read %>
-        </svg>
-        <div>
-          <h3 class="fw-bold mb-0 fs-4">Safe by design</h3>
-          <p>Your data is securely encrypted and meticulously protected.</p>
-        </div>
+    </div>
+    <div class="col d-flex align-items-start">
+      <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
+        <%= render inline: Rails.root.join('public/safe.svg').read %>
+      </svg>
+      <div>
+        <h3 class="fw-bold mb-0 fs-4">Safe by design</h3>
+        <p>Your data is securely encrypted and meticulously protected.</p>
       </div>
-      <div class="col d-flex align-items-start">
-        <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-          <%= render inline: Rails.root.join('public/magic.svg').read %>
-        </svg>
-        <div>
-          <h3 class="fw-bold mb-0 fs-4">Clutter-free design</h3>
-          <p>Intuitive and user-friendly interface for a pleasing experience.</p>
-        </div>
+    </div>
+    <div class="col d-flex align-items-start">
+      <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
+        <%= render inline: Rails.root.join('public/magic.svg').read %>
+      </svg>
+      <div>
+        <h3 class="fw-bold mb-0 fs-4">Clutter-free design</h3>
+        <p>Intuitive and user-friendly interface for a pleasing experience.</p>
       </div>
-      <div class="col d-flex align-items-start">
-        <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-          <%= render inline: Rails.root.join('public/peace.svg').read %>
-        </svg>
-        <div>
-          <h3 class="fw-bold mb-0 fs-4">Peace of mind</h3>
-          <p>Simplify your routines as you navigate your daily tasks.</p>
-        </div>
+    </div>
+    <div class="col d-flex align-items-start">
+      <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
+        <%= render inline: Rails.root.join('public/peace.svg').read %>
+      </svg>
+      <div>
+        <h3 class="fw-bold mb-0 fs-4">Peace of mind</h3>
+        <p>Simplify your routines as you navigate your daily tasks.</p>
       </div>
-      <div class="col d-flex align-items-start">
-        <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-          <%= render inline: Rails.root.join('public/person-bounding-box.svg').read %>
-        </svg>
-        <div>
-          <h3 class="fw-bold mb-0 fs-4">Patient tracker</h3>
-          <p>Experience the ease of a multi-platform solution, designed with you in mind, and elevate your efficiency to new heights.</p>
-        </div>
+    </div>
+    <div class="col d-flex align-items-start">
+      <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
+        <%= render inline: Rails.root.join('public/person-bounding-box.svg').read %>
+      </svg>
+      <div>
+        <h3 class="fw-bold mb-0 fs-4">Patient tracker</h3>
+        <p>Experience the ease of a multi-platform solution, designed with you in mind, and elevate your efficiency to new heights.</p>
       </div>
-      <div class="col d-flex align-items-start">
-        <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-          <%= render inline: Rails.root.join('public/phone.svg').read %>
-        </svg>
-        <div>
-          <h3 class="fw-bold mb-0 fs-4">Mobile-first approach</h3>
-          <p>Your phone is a primary tool at work, so Calcometer is designed to be mobile first and friendly.</p>
-        </div>
+    </div>
+    <div class="col d-flex align-items-start">
+      <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
+        <%= render inline: Rails.root.join('public/phone.svg').read %>
+      </svg>
+      <div>
+        <h3 class="fw-bold mb-0 fs-4">Mobile-first approach</h3>
+        <p>Your phone is a primary tool at work, so Calcometer is designed to be mobile first and friendly.</p>
       </div>
     </div>
   </div>
+</div>
+<div class="d-grid d-sm-flex justify-content-sm-center d-md-none d-lg-none gap-2 mb-5">
+  <a class="btn btn-primary btn-lg px-4 me-sm-3" href="<%= new_user_registration_path %>" role="button">Sign Up</a>
+</div>
