--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,21 +1,14 @@
 <%= notice %>
 
-<%= render @client %>
-
-<br>
-
-<div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-  <%= link_to "Edit this client", edit_client_path(@client), class:"btn btn-primary" %>
-  <%= link_to "Back to clients", clients_path, class:"btn btn-secondary" %>
-
-  <div class="btn-group" role="group">
-    <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-      More Options
-    </button>
-    <ul class="dropdown-menu">
-      <li>
-        <%= button_to "Delete this client", @client, method: :delete, class: "dropdown-item"%>
-      </li>
-    </ul>
+<div class="card">
+  <div class="card-body">
+    <h2 class="card-title">👤 <%= @client.name %></h2>
+    <p class="card-text">📧 <%= @client.email %></p>
+    <a href="#" class="btn btn-primary mt-1">Send monthly report</a>
   </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item"><%= link_to "Back to clients", clients_path%></li>
+    <li class="list-group-item"><%= link_to "Edit this client", edit_client_path(@client) %></li>
+    <li class="list-group-item"><%= link_to "Delete this client", @client, method: :delete %></li>
+  </ul>
 </div>
