--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,7 +30,7 @@
           </li>
         </ul>
       <% else %>
-        <ul class="nav col-12 col-md-auto">
+        <ul class="nav col-12 col-md-auto d-md-none d-lg-none">
           <%= link_to "Login", new_user_session_path, class: "btn btn-outline-dark me-2" %>
           <%= link_to "Sign-up", new_user_registration_path, class: "btn btn-primary" %>
         </ul>
