--- a/app/views/pages/_existing_user.html.erb
+++ b/app/views/pages/_existing_user.html.erb
@@ -5,7 +5,7 @@
   <div class="row p-1">
   <div class="col-sl-6 p-2">
     <div class="card">
-      <a href="/treatments" class="btn btn-primary"><h2>Treatments</h2></a>
+      <a href="/appointments" class="btn btn-primary"><h2>Appointments</h2></a>
     </div>
   </div>
   <div class="col-sm-6 p-2">
