--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse" id="collapseWidthExample">
       <% if user_signed_in? %>
         <ul class="nav">
-          <li class="nav-item"><a href="/treatments" class="nav-link text-dark"><strong>Treatments</strong></a></li>
+          <li class="nav-item"><a href="/appointments" class="nav-link text-dark"><strong>Appointments</strong></a></li>
           <li class="nav-item"><a href="/analytics" class="nav-link text-dark">Analytics</a></li>
           <li class="nav-item"><a href="/patients" class="nav-link text-dark">Patients</a></li>
           <li class="nav-item"><a href="/clients" class="nav-link text-dark">Clients</a></li>
