--- a/app/views/pages/_new_user.html.erb
+++ b/app/views/pages/_new_user.html.erb
@@ -1,6 +1,6 @@
 <div class="px-4 pt-3 text-center border-bottom">
   <h1 class="display-4 fw-bold text-body-emphasis">Calcometer</h1>
-  <h4 class="lead pt-3 pb-3">Manage with ease your travel distances, times, and treatment schedules.</h4>
+  <h4 class="lead pt-3 pb-3">Manage with ease your travel distances, times, and appointment schedules.</h4>
   <div class="col-lg-6 mx-auto">
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
       <a class="btn btn-primary btn-lg px-4 me-sm-3" href="<%= new_user_registration_path %>" role="button">Sign Up</a>
