--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -18,6 +18,6 @@
     <li class="list-group-item"></li>
     <li class="list-group-item"><%= link_to "Back to patients", patients_path%></li>
     <li class="list-group-item"><%= link_to "Edit patient", edit_patient_path(@patient) %></li>
-    <li class="list-group-item"><%= link_to "Delete this patient", @patient, method: :delete %></li>
+    <li class="list-group-item"><%= button_to "Delete this patient", @patient, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger", title: "Delete" %></li>
   </ul>
 </div>
