--- a/app/views/patients/_patient.html.erb
+++ b/app/views/patients/_patient.html.erb
@@ -7,9 +7,8 @@
 
       <p class="card-text">
         <strong>📍</strong>
-        <%= patient.address %>
+        <%= patient.address.full_address %>
       </p>
-
     </div>
   <% end %>
 </div>
