--- a/app/views/analytics/index.html.erb
+++ b/app/views/analytics/index.html.erb
@@ -28,13 +28,13 @@
   <% end %>
 </div>
 
-<div id="analytics-overview" class="text-center my-4">
+<div class="text-center my-4">
   <h3>During this period, you drove</h3>
-  <h3><strong><%= @trips.total_driving_distance.round(2) %> km & <%= @trips.total_driving_time %> minutes</strong></h3>
+  <h3><strong><%= @total_distance.round(2) %> km & <%= @total_time %> minutes</strong></h3>
   <h3>for <strong><%= @appointments.count %></strong> appointments</h3>
 </div>
 
-<div id="appointments" class="row">
+<div class="row">
   <% @appointments.sort_by(&:start_time).each do |appointment| %>
     <div class="col-md-4 mb-3 appointment-card">
       <%= render appointment, appointment: appointment %>
