--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,21 +1,11 @@
 <%= notice %>
+<div class="card">
+  <%= render @appointment %>
 
-<%= render @appointment %>
-
-<br>
-
-<div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-  <%= link_to "Edit this appointment", edit_appointment_path(@appointment), class:"btn btn-primary" %>
-  <%= link_to "Back to appointments", appointments_path, class:"btn btn-secondary" %>
-
-  <div class="btn-group" role="group">
-    <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-      More Options
-    </button>
-    <ul class="dropdown-menu">
-      <li>
-        <%= button_to "Delete this appointment", @appointment, method: :delete, class: "dropdown-item" %>
-      </li>
+  <div class="mt-1">
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item"><%= link_to "Back to appointments", appointments_path%></li>
+      <li class="list-group-item"><%= button_to "Delete this appointment", @appointment, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger text-light", title: "Delete" %></li>
     </ul>
   </div>
 </div>
