--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -5,7 +5,10 @@
   <div class="mt-1">
     <ul class="list-group list-group-flush">
       <li class="list-group-item"><%= link_to "Back to appointments", appointments_path%></li>
-      <li class="list-group-item"><%= button_to "Delete this appointment", @appointment, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger text-light", title: "Delete" %></li>
+      <li class="list-group-item"><%= button_to "Delete this appointment", @appointment,
+                                                                            method: :delete,
+                                                                            class: "btn btn-danger text-light",
+                                                                            title: "Delete" %></li>
     </ul>
   </div>
 </div>
