--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,12 +5,12 @@
       class="navbar-toggler text-dark"
       type="button"
       data-bs-toggle="collapse"
-      data-bs-target="#collapseWidthExample"
+      data-bs-target="#collapseWidthNavbar"
       aria-expanded="false"
-      aria-controls="collapseWidthExample">
+      aria-controls="collapseWidthNavbar">
       <strong>Menu</strong>
     </button>
-    <div class="collapse navbar-collapse" id="collapseWidthExample">
+    <div class="collapse navbar-collapse" id="collapseWidthNavbar">
       <% if user_signed_in? %>
         <ul class="nav">
           <li class="nav-item"><a href="/appointments" class="nav-link text-dark"><strong>Appointments</strong></a></li>
