update colors with human interface guidelines

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,9 @@
 // Define variables for your color scheme
 
-// For example:
-$red: #FD1015;
-$blue: #0D6EFD;
-$yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+$red: #ff3b30;
+$blue: #007aff;
+$yellow: #ffcc00;
+$orange: #ff9500;
+$green: #34c759;
+$gray: #0e0000;
+$light-gray: #f4f4f4;
