--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -18,12 +18,23 @@
     <p class="card-text">
       <strong>🗓️ Total appointments:</strong> <%= @patient.appointments.count %>
     </p>
-
+    <p class="card-text">
+      <strong>🕰️ Time spent with this patient:</strong> <%= @total_time_spent_with_patient %> hours
+    </p>
+    <p class="card-text">
+      <ul class="list-group list-group-flush">
+        <% @patient.appointments.sort_by(&:start_time).reverse.each do |appointment| %>
+          <li class="list-group-item">
+            <%= appointment.start_time.strftime("%Y, %B %d") %> -
+            <%= ((appointment.end_time - appointment.start_time) / 60).to_i %></strong> minutes
+          </li>
+        <% end %>
+      </ul>
+    </p>
   </div>
-
   <ul class="list-group list-group-flush">
     <li class="list-group-item"><%= link_to "Back to patients", patients_path%></li>
     <li class="list-group-item"><%= link_to "Edit patient", edit_patient_path(@patient) %></li>
-    <li class="list-group-item"><%= button_to "Delete this patient", @patient, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger text-light", title: "Delete" %></li>
+    <li class="list-group-item"><%= button_to "Delete this patient", @patient, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger", title: "Delete" %></li>
   </ul>
 </div>
