remove text-light class after fixing contrast ration

--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -13,7 +13,7 @@
 <footer class="fixed-bottom border-top border-dark footer-css">
   <div class="container d-flex flex-column justify-content-center p-3">
     <button
-      class="btn btn-primary text-light"
+      class="btn btn-primary"
       type="button"
       data-bs-toggle="collapse"
       data-bs-target="#collapseWidthButtonCalculator"
