--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -9,6 +9,6 @@
   <ul class="list-group list-group-flush">
     <li class="list-group-item"><%= link_to "Back to clients", clients_path%></li>
     <li class="list-group-item"><%= link_to "Edit this client", edit_client_path(@client) %></li>
-    <li class="list-group-item"><%= button_to "Delete this client", @client, method: :delete, class: "btn btn-danger text-light", title: "Delete" %></li>
+    <li class="list-group-item"><%= button_to "Delete this client", @client, method: :delete, class: "btn btn-danger", title: "Delete" %></li>
   </ul>
 </div>
