--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -53,6 +53,6 @@
   data: { confirm: "Are you sure?",
   turbo_confirm: "Are you sure?" },
   method: :delete,
-  class: "btn btn-danger text-light mb-2" %>
+  class: "btn btn-danger mb-2" %>
 
 </div>
