--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -7,7 +7,7 @@
       <li class="list-group-item"><%= link_to "Back to appointments", appointments_path%></li>
       <li class="list-group-item"><%= button_to "Delete this appointment", @appointment,
                                                                             method: :delete,
-                                                                            class: "btn btn-danger text-light",
+                                                                            class: "btn btn-danger",
                                                                             title: "Delete" %></li>
     </ul>
   </div>
