remove flatpickr and improve date search in analytics

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body class="bg-light">
     <%= render "shared/navbar" %>
-    <div class="content container  px-4 py-2">
+    <div class="content container px-3 pb-1">
       <%= yield %>
     </div>
     <%= render "shared/flashes" %>
