--- a/app/views/pages/_existing_user.html.erb
+++ b/app/views/pages/_existing_user.html.erb
@@ -23,6 +23,11 @@
       <a href="/clients" class="btn btn-light"><h2>Clients</h2></a>
     </div>
   </div>
+    <div class="col-sm-6 p-2">
+    <div class="card border-dark">
+      <a href="/" class="btn btn-light"><h2>Export data</h2></a>
+    </div>
+  </div>
   <div class="col-sm-6 p-2">
     <div class="card border-dark">
       <a href="/users/edit" class="btn btn-light"><h2>Edit my account</h2></a>
