--- a/app/views/analytics/index.html.erb
+++ b/app/views/analytics/index.html.erb
@@ -1,31 +1,36 @@
-<h1 class="text-center">Analytics</h1>
-
-<div id="date-navigation" class="text-center my-4">
-  <%= link_to 'Previous Day', analytics_path(start_date: (@start_date - 1.day).strftime('%Y-%m-%d'),
-    end_date: (@end_date - 1.day).strftime('%Y-%m-%d')),
-    class: 'btn btn-outline-dark mr-2' %>
-  <%= link_to 'Today', analytics_path(start_date: Date.today.strftime('%Y-%m-%d'),
-    end_date: Date.today.strftime('%Y-%m-%d')),
-    class: 'btn btn-primary mr-2' %>
-  <%= link_to 'Next Day', analytics_path(start_date: (@start_date + 1.day).strftime('%Y-%m-%d'),
-    end_date: (@end_date + 1.day).strftime('%Y-%m-%d')),
-    class: 'btn btn-outline-dark' %>
+<div class="container text-center">
+  <div class="row align-items-center">
+    <div class="col-9">
+      <h1>Analytics</h1>
+    </div>
+    <div class="col-3">
+    <%= link_to 'Today', analytics_path(start_date: Date.today.strftime('%Y-%m-%d'), end_date: Date.today.strftime('%Y-%m-%d')), class: 'btn btn-outline-dark' %>
+    </div>
+  </div>
 </div>
 
-<div id="date-selection" data-controller="date-range" class="my-4">
-  <%= form_tag analytics_path, method: :get, class: 'form-inline justify-content-center' do %>
-    <div class="form-group">
-      <%= label_tag :start_date, 'Select start date:', class: 'mr-2' %>
-      <%= date_field_tag :start_date, @start_date, required: true,
-        data: { action: "change->date-range#updateEndDateMin", date_range_target: "startDate" },
-        class: 'form-control mr-2' %>
-      <%= label_tag :end_date, 'Select end date:', class: 'mr-2' %>
-      <%= date_field_tag :end_date, @end_date, required: true,
-        data: { date_range_target: "endDate" },
-        class: 'form-control mr-2' %>
-      <%= submit_tag 'Submit', class: 'btn btn-primary mt-2' %>
+<div class="container text-center my-2 border border-dark rounded" style="--bs-border-opacity: .1;">
+  <div class="row align-items-center">
+    <div class="col-3">
+        <%= link_to '-1', analytics_path(start_date: (@start_date - 1.day).strftime('%Y-%m-%d'), end_date: (@end_date - 1.day).strftime('%Y-%m-%d')), class: 'btn btn-outline-dark' %>
     </div>
-  <% end %>
+    <div class="col-6">
+      <div id="date-selection" data-controller="date-range">
+        <%= form_tag analytics_path, method: :get, class: 'form-inline justify-content-center' do %>
+          <div class="form-group">
+            <%= label_tag :start_date, 'Start date:', class: 'mr-2' %>
+            <%= date_field_tag :start_date, @start_date, required: true, data: { action: "change->date-range#updateEndDateMin", date_range_target:"startDate" }, class: 'form-control mr-2' %>
+            <%= label_tag :end_date, 'End date:', class: 'mr-2' %>
+            <%= date_field_tag :end_date, @end_date, required: true, data: { date_range_target: "endDate" }, class:'form-control mr-2 mb-2' %>
+            <%= submit_tag 'Submit', class: 'w-100 btn btn-dark' %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+    <div class="col-3 ">
+        <%= link_to '+1', analytics_path(start_date: (@start_date + 1.day).strftime('%Y-%m-%d'), end_date: (@end_date + 1.day).strftime('%Y-%m-%d')), class: 'btn btn-outline-dark' %>
+    </div>
+  </div>
 </div>
 
 <%# Tabs for distance and appointments %>
