raising width of primary buttons to 100%

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -27,3 +27,6 @@ $border-radius-sm: 5px;
 $dropdown-border-radius: 5px;
 $dropdown-min-width: 8rem;
 $min-contrast-ratio: 3 !default;
+.btn-primary {
+  width: 100%;
+}
